[tool.poetry]
name = "cv-flask"
version = "0.1.0"
description = ""
authors = ["razvan-ritivoi <razvan.ritivoi@visma.com>"]
readme = "README.md"
packages = [{include = "cv_flask"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Flask = "^2.2.2"
pypdf = "^3.3.0"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
